--- a/styles/global.css
+++ b/styles/global.css
@@ -75,6 +75,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+body {
+  padding-top: 50px;
+  height: calc(100vh - 50px);
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
